<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/logview_title"
        android:id="@+id/textView" />

    <ListView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/listView"
        android:layout_weight="1"
        android:choiceMode="singleChoice"
        android:clickable="true"
        android:longClickable="false"
        android:contextClickable="false"
        android:focusableInTouchMode="false" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/totalcost"
        android:id="@+id/txtTotalCost" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/addbutton"
        android:id="@+id/btnAddEntry"
        android:layout_weight="0"/>

</LinearLayout>